# OpenFGA_tutorial

./: .envrc  .gitignore  LICENSE  README.md  flake.nix
exercises/: README.md  exercise1_basic_check_access.md  exercise2_adding_relationships.md  exercise2_list_accessible_documents.md  exercise3_extended_model.md  exercise3_who_can_access_document.md  exercise4_authorization_for_document_service.md  exercise4_custom_authorization.md  exercise5_conditional_access.md  exercise5_troubleshooting_access.md
exercises/solutions/: exercise1.py  exercise3.py
exercises/tests/: exercise1_test.py  exercise2_test.py  exercise3_test.py  exercise4_test.py
fga_example/: .env.example  Dockerfile  README.md  authorized_document_service_example.py  default.conf  docker-compose.yml  example_document_service.py  hello.py  pyproject.toml
fga_example/data/: documents.csv  folders.csv  users.csv
fga_example/fga_example/: __init__.py  authorized_document_service.py  cli.py  client.py  document_service.py  fga_client.py  fga_init.py  init.py  main.py  model.fga  sample_tuples.json
